<resources>
    <string name="app_name">控几枝几</string>
    <string name="no_permission">权限不足</string>
    <string name="no_permission_accessibility">需要为APP开启辅助功能才能正常运行</string>
    <string name="no_permission_overlay">需要为APP开启悬浮窗功能，可爱的小宠物才能正常显示</string>
    <string name="countdown_default">00:00:00</string>
    <string name="hint_study">学习咯</string>
    <string name="hint_bubble">提示气泡</string>
    <string name="monitor_app_accessibility_desc">开启服务是为了使用【控几枝几】的\"监测APP打开\"的核心功能\n\n提示：打开服务时，会收到系统例行的警示提醒，【控几枝几】不会进行侵害用户利益的行为，请放心使用</string>
    <string name="countdown_mode">倒计时模式</string>
    <string name="start_study">开始学习咯</string>
    <string name="study_time">嗯？学习期间，不能改配置噢</string>
    <string name="clock_mode">定时模式</string>
    <string name="no_picker_study_time">嗯？你还没有选择学习时间呢！</string>
    <string name="pet_default" />
    <string name="dog_studying">开始学习啦~~其它APP已经被俺禁用了，好好学习吧</string>
    <string name="dog_warn1">不要玩手机啦~~好好学习嘛</string>
    <string name="dog_warn2">xixi~~俺看着你，看你怎么玩手机</string>
    <string name="dog_warn3">不要再玩手机啦~~</string>
    <string name="dog_warn4">原谅你一次~~俺继续睡了，记住别玩手机了哦</string>
    <string name="dog_studied1">lala~~辛苦了，俺允许你玩手机了</string>
    <string name="dog_studied2">zan~~俺越来越崇拜你了</string>
    <string name="dog_studied3">不错哦，俺睡去了~~</string>
    <string name="squirrel_studying1">小伙子~~好好学，老夫看好你，其它APP老夫就帮你禁掉了</string>
    <string name="squirrel_studying2">你就放心去学习吧~~其它APP交给老夫保管准没错</string>
    <string name="squirrel_studying3">老夫已经收到你的愿望了，放心，其它APP在老夫这边很安全</string>
    <string name="squirrel_warn1">啥~~你不是跟老夫说不玩手机了么，咋转眼就又来玩了</string>
    <string name="squirrel_warn2">让你再玩~~等老夫扣撮出来弹死你</string>
    <string name="squirrel_warn3">孺子不可教也~非要气死老夫</string>
    <string name="squirrel_warn4">看老夫的卖萌绝招~~别玩了好嘛~</string>
    <string name="squirrel_warn5">老夫说过其它APP尽管放心交给老夫保管</string>
    <string name="squirrel_studied1">小伙子表现不错~老夫已经解封APP了，玩去吧</string>
    <string name="squirrel_studied2">Good~</string>
    <string name="pet">宠物</string>
    <string name="setting">设置</string>
    <string name="allow_list">白名单</string>
    <string name="about">关于</string>
    <string name="user_app">用户APP</string>
    <string name="system_app">系统APP</string>
    <string name="no_permission_usage_access">需要为APP开启查看应用使用情况功能才能正常运行</string>
    <string name="study">好好学习，天天向上</string>
    <string name="alarm_monitor">省心监控模式</string>
    <string name="accessibility_monitor">省电监控模式</string>
    <string name="rabbit">可爱的小兔子</string>
    <string name="dog">萌萌的小狗子</string>
    <string name="squirrel">痞帅的小松鼠</string>
    <string name="poem">开心作诗</string>
    <string name="hint_poem">出题吧，不要超过5个字噢</string>
    <string name="poem_error">哎呀，出错了。稍后试试呗o(╥﹏╥)o</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rabbit_studying">啦啦啦。。开始学习啦~~其它APP已经被禁用了，好好学习吧</string>
    <string name="rabbit_warn1">不要玩手机了，我超凶的[○･｀Д´･ ○]</string>
    <string name="rabbit_warn2">还想玩手机，我要发火了(σ｀д′)σ</string>
    <string name="rabbit_warn3">不要玩了嘛(ノ｀Д)ノ</string>
    <string name="rabbit_warn4">啊，你怎么这样[○･｀Д´･ ○]</string>
    <string name="rabbit_studied1">辛苦了，去休息吧(#^.^#)</string>
    <string name="rabbit_studied2">你真棒(๑•̀ㅂ•́)و✧</string>
</resources>