<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="cp.kt.selfcontrol.ui.fragment.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_allowListFragment3"
            app:destination="@id/allowListFragment" />
        <action
            android:id="@+id/action_homeFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>
    <fragment
        android:id="@+id/allowListFragment"
        android:name="cp.kt.selfcontrol.ui.fragment.AllowListFragment"
        android:label="@string/allow_list"
        tools:layout="@layout/fragment_allow_list" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="cp.kt.selfcontrol.ui.fragment.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
</navigation>