<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/petImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:src="@drawable/rabbit1"
        app:layout_constraintBottom_toTopOf="@+id/pet_countdownTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/pet_countdownTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/countdown_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/petImageView"
        app:layout_constraintStart_toStartOf="@+id/petImageView"
        app:layout_constraintTop_toBottomOf="@+id/petImageView" />

    <ImageView
        android:id="@+id/hintImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/hint_bubble"
        app:layout_constraintBottom_toBottomOf="@+id/petImageView"
        app:layout_constraintEnd_toStartOf="@+id/petImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dialog_left_top" />

    <TextView
        android:id="@+id/hintTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/hint_study"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/hintImageView"
        app:layout_constraintEnd_toEndOf="@+id/hintImageView"
        app:layout_constraintStart_toStartOf="@+id/hintImageView"
        app:layout_constraintTop_toTopOf="@+id/hintImageView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/hintGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="hintImageView,hintTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>